project(leetcode_problems)

cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)

add_executable(4 4/1.cpp)
add_executable(15 15/1.cpp)
add_executable(111 111/1.cpp)
add_executable(828 828/1.cpp)
add_executable(907 907/1.cpp)
add_executable(1038 1038/solution.cpp)
add_executable(1094 1094/solution.cpp)
add_executable(1326 1326/1.cpp)
add_executable(1423 1423/solution.cpp)
add_executable(1657 1657/1.cpp)
add_executable(1670 1670/1.cpp)
add_executable(2336 2336/1.cpp)
add_executable(2661 2661/1.cpp)
